Update logo title in login page for branding consistency

--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -98,7 +98,7 @@
 
                 <div class="title-wrapper text sign-in">
                     <h2 class="hero-title">
-                    Neg<span class="highlight">roni</span>...<br>Rating
+                    	<span class="highlight">Negro</span>ni...<br>Rating
                     </h2>
                 </div>
             </div>
