feature: - registration and authentication fixed

--- a/backend/src/main/resources/templates/login.html
+++ b/backend/src/main/resources/templates/login.html
@@ -93,7 +93,7 @@
 			<!-- SIGN IN CONTENT -->
             <div class="col align-items-center flex-col">
                 <div class="logo-container img sign-in">
-                    <img src="/images/logo.png" alt="AstaLaVista" class="logo-img" />
+                    <img src="/src/assets/images/logo.pnges/logo.png" alt="AstaLaVista" class="logo-img" />
                 </div>
 
                 <div class="title-wrapper text sign-in">
@@ -106,7 +106,7 @@
 			<!-- SIGN UP CONTENT -->
 			<div class="col align-items-center flex-col">
                 <div class="logo-container img sign-up">
-                    <img src="/images/gin.png" alt="AstaLaVista" class="logo-img" />
+                    <img src="/src/assets/images/gin.pngges/gin.png" alt="AstaLaVista" class="logo-img" />
                 </div>
 
                 <div class="title-wrapper text sign-up">
